# vehicle_aero_manager

./: .gitignore  CLAUDE.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  dump_template_defaults.py  pyproject.toml  template_defaults.json  test_compute_engine.py  test_output.txt  test_ride_height_result.json  test_transform_run_result.json  test_xml_output.xml
backend/alembic/: env.py
backend/alembic/versions/: 0601bb149381_add_geometry_override_id_to_runs.py  0c0f562f6ba5_add_decimation_ratio_to_geometries.py  0e04df3b508e_add_is_hidden_to_templates.py  100503ac21a7_add_parent_case_id_to_cases.py  21095b2b7bda_add_cases_configurations_runs.py  40849f49edd9_add_templates_and_template_versions.py  4a08074381f4_add_condition_maps_conditions_refactor_.py  55f509394753_create_users_table.py  8949ff1689b0_add_ride_height_yaw_to_conditions_and_.py  a1b2c3d4e5f6_add_template_map_case_folders.py  abc6185bae8f_add_case_number_and_run_number.py  b6662ad9ba21_add_is_linked_to_geometries.py  bb5b060716b4_remove_template_id_from_geometry_.py  bd293b1f57fc_add_assembly_folders.py  c3b4d5e6f7a8_add_belt_stl_path_to_runs.py  (+6 more)
backend/app/: config.py  database.py  main.py
backend/app/auth/: deps.py  jwt.py
backend/scripts/: check_assembly.py  check_runs.py  create_superadmin.py  debug_geometry_paths.py  reset_error_runs.py  test_compute_engine.py  test_empty_assembly_xml.py  test_ride_height.py  test_transform_run.py  test_viewer_service.py  test_xml_generation.py  test_xml_output.xml  write_frontend_modals.py  write_frontend_output_ui.py  write_probe_ui.py
(+118 files in other folders)
