[project]
name = "backend"
version = "0.1.0"
description = "VAM - Vehicle Aero Manager backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.135.2",
    "lxml>=6.0.2",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "trimesh>=4.11.5",
    "uvicorn[standard]>=0.42.0",
]
